--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,38 @@
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 80%;
+  max-width: 100%;
+}
+
+thead th {
+  border-bottom: 2px solid #dedede;
+}
+
+tfoot th {
+  border-top: 2px solid #dedede;
+}
+
+td {
+  border-bottom: 1px solid #dedede;
+}
+
+th,
+td {
+  text-align: left;
+  padding: 0.5rem;
+}
+
+.muted-button {
+  background: transparent;
+  border: 2px solid black;
+  color: #4e4e4e;
+  margin-left: 10px;
+}
+
 .App-link {
   color: #61dafb;
 }
