--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,11 @@
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
+.flex-large {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -59,6 +64,36 @@ td {
   border: 2px solid black;
   color: #4e4e4e;
   margin-left: 10px;
+}
+
+form {
+  display: block;
+  margin-top: 0em;
+  box-sizing: inherit;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+}
+
+h1 {
+  padding-left: 18px;
+}
+
+input{
+  width:60%;
+  height: 30px;
+}
+
+label {
+  font-weight: 600;
+  width: 600px;
+  display: block;
+  width: 80%;
+  margin: 1rem 0 0.5rem;
+  font-size: 18px;
+}
+
+textarea:hover {
+  border: 1px solid #c5c5c5;
 }
 
 .App-link {
